overflow correction

--- a/css/style.css
+++ b/css/style.css
@@ -74,13 +74,14 @@ main {
 }
 .sidebar-top {
     height: calc(100% - 200px);
-    min-height: 200px;
+    min-height: 100px;
     width: 100%;
+    overflow: hidden;
 }
 .sidebar-bottom {
     height: 100px;
     width: 100%;
-    margin-top: 3%;
+    margin-top: 10%;
 }
 .sidebar-bottom hr {
     width: 80%;
